--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "pg": "^7.4.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.7",
+    "redux-thunk": "^2.3.0",
     "sequelize": "^4.32.2"
   },
   "devDependencies": {
